unpackaged/main/default/objects/bt_base__Schedule_Execution__c/bt_base__Schedule_Execution__c.object-meta.xml
<CustomObject>
    <label>Schedule Execution</label>
    <nameField>
        <displayFormat>SE-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Schedule Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>