unpackaged/main/default/objects/bt_base__Schedule_Execution__c/fields/bt_base__External_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>