unpackaged/main/default/objects/bt_base__Schedule_Execution__c/fields/bt_base__Last_Log_Updates_At__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Last_Log_Updates_At__c</fullName>
    <label>Last Log Updates At</label>
    <type>DateTime</type>
</CustomField>