unpackaged/main/default/objects/bt_base__Schedule_Execution__c/fields/bt_base__Last_Support_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Last_Support_Notification_Sent__c</fullName>
    <label>Last Support Notification Sent</label>
    <type>DateTime</type>
</CustomField>