unpackaged/main/default/objects/bt_base__Schedule_Execution__c/fields/bt_base__Notification_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Notification_Job_Id__c</fullName>
    <label>Notification Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>