unpackaged/main/default/objects/bt_base__Schedule_Execution__c/fields/bt_base__Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Upcoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>