unpackaged/main/default/objects/bt_base__Schedule_Execution__c/fields/bt_base__Status__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>